<resources>
    <string name="app_name">NYCSchoolForArtech</string>
    <string name="schools_phone">Phone # %s</string>
    <string name="score_no_test_takers">Number of test takers: %s</string>
    <string name="score_reading_score">SAT Average Critical Reading Score: %s</string>
    <string name="score_math_score">SAT Average Math Score: %s</string>
    <string name="score_writing_score">SAT Average Writing Score: %s</string>
    <string name="score_overview">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="example_school_name">MAHARISHI INTERNATIONAL UNIVERSITY</string>
    <string name="overview">OVERVIEW</string>
    <string name="example_location">1000 N 4TH ST</string>
    <string name="example_address">Address</string>

</resources>